tests/rustdoc-ui/doc-alias.rs
#[doc(alias = "shouldn't work!")] //~ ERROR
pub fn foo() {}
